--- a/common/common.scss
+++ b/common/common.scss
@@ -60,11 +60,7 @@ span.hashtag,
 .settings .setting.overridden h3,
 .d-header-icons .icon:hover,
 .d-header-icons .icon:active,
-.extra-info-wrapper .discourse-tag.box,
-a,
-a:visited,
-.d-icon.d-icon-d-tracking, .d-icon.d-icon-d-watching
-{
+.extra-info-wrapper .discourse-tag.box {
 	color: $main-color;
 }
 
@@ -77,7 +73,7 @@ a:visited,
 .modal-dialog .modal-content,
 .modal-dialog.cascading-modal .modal-header,
 .z-depth-1-half,
-ul.instagram-photos li img{
+ul.instagram-photos li img {
 	background: $main-color;
 }
 
@@ -133,7 +129,12 @@ tr.topic-list-item-separator + .topic-list-item + .topic-list-item,
 .topic-meta-data,
 .reply > .row,
 .category-boxes .category-box-inner,
-.category-boxes-with-topics .category-box-inner {
+.category-boxes-with-topics .category-box-inner,
+#topic-title .title-wrapper,
+#topic-footer-buttons,
+.list-controls,
+.top-lists,
+.topic-list-bottom {
 	background: $main-background;
 }
 
@@ -144,7 +145,8 @@ tr.topic-list-item-separator + .topic-list-item + .topic-list-item,
 .layouts-nav-button > li > a:hover,
 .admin-controls,
 .topic-map,
-.discourse-tag.box {
+.discourse-tag.box,
+.category-list thead {
 	background: $secondary-background;
 }
 
@@ -158,6 +160,10 @@ button.ok:hover {
 
 .modal-backdrop {
 	background-color: rgba(22, 22, 22, 0.7);
+}
+
+.topic-list thead {
+	background: rgba(255, 255, 255, 0.9);
 }
 
 #user-card .card-content,
@@ -347,7 +353,8 @@ img.avatar {
 // custom borders ------------------------------------
 
 img.avatar,
-.docked .d-header {
+.docked .d-header,
+.reply * .topic-meta-data {
 	border-bottom: none;
 }
 
@@ -370,6 +377,11 @@ img.avatar,
 .category-boxes .category-box-inner,
 .category-boxes-with-topics .category-box-inner {
 	border-width: 1px;
+}
+
+.category-list tbody tr,
+.reply > .row {
+	border-top: 1px solid $border-color;
 }
 
 // fonts ------------------------------------------------------------------------------------
@@ -462,21 +474,21 @@ td.main-link .topic-title,
 	margin: 0 auto;
 }
 
-// zero -------------------------------------------------
+// margin zero -------------------------------------------------
 
 .topic-list-item,
 #list-area,
 .d-header .contents,
 .main-content.topic.has-sidebars .topic-meta-data,
 aside.quote,
-.d-header button.login-button {
+.d-header button.login-button,
+.topic-meta-data {
 	margin: 0 !important;
 }
 
 // small all sides ------------------------------------
 
 .topic-avatar,
-.topic-meta-data,
 .main-content.topic.has-sidebars
 	.posts-wrapper
 	.small-action
@@ -603,9 +615,13 @@ section.navigation-container {
 	margin: 0.5em 0;
 }
 
+.user-nav {
+	margin: 10px 0px;
+}
+
 // padding ----------------------------------------------------------------------------------
 
-// zero -------------------------------------------------
+// padding zero -------------------------------------------------
 
 .topic-users > .inline,
 .widget-container.app,
@@ -624,7 +640,8 @@ a.mention-group,
 	.small-action-desc,
 .widget-container,
 .topic-avatar,
-.topic-body {
+.topic-body,
+.reply * .topic-meta-data  {
 	padding: 0 !important;
 }
 
@@ -662,8 +679,7 @@ aside.quote,
 .main-content.topic.has-sidebars #topic-title .container,
 .topic-list .topic-list-item-separator td span,
 .main-content .nav-drop .selected-nav-item,
-.topic-body .regular,
-.main-content.topic.has-sidebars .topic-meta-data {
+.topic-body .regular {
 	padding: 0 1.25em;
 }
 
@@ -735,6 +751,11 @@ nav.post-controls {
 	padding-top: 3px !important;
 }
 
+.user-nav {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
 // text-align  ----------------------------------------------------------------------------------
 
 // center ------------------------------------
@@ -770,7 +791,8 @@ nav.post-controls {
 .alert,
 body.navigation-topics .d-header .wrap,
 .d-header .wrap,
-#share-link.visible {
+#share-link.visible,
+.wrap {
 	max-width: 95vw;
 }
 
@@ -787,7 +809,6 @@ body.navigation-topics .d-header .wrap,
 
 .wrap {
 	width: 1100px;
-	max-width: 95vw;
 }
 
 .topic-map-post img.avatar {
@@ -804,7 +825,9 @@ header.d-header.clearfix {
 }
 
 #reply-control .d-editor-preview img:not(.thumbnail),
-.cooked img:not(.thumbnail) {
+.cooked img:not(.thumbnail),
+#topic-title .title-wrapper,
+#topic-footer-buttons {
 	max-width: 100%;
 }
 
@@ -1034,57 +1057,29 @@ li#current-user a:not(.badge-notification) {
 
 // TESTS --------------------------------------------
 
-.user-nav {
-	margin: 10px 0px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-}
-
 .topic-meta-data {
 	padding: 35px;
-	margin: 0;
 	border-bottom: 1px solid $border-color;
-}
-
-.reply * .topic-meta-data {
-	padding: 0;
-	border-bottom: none;
 }
 
 #topic-title .title-wrapper,
 #topic-footer-buttons {
-	background: $main-background;
 	padding: 1em;
 	display: inline-block;
 	margin: 0 auto;
 	width: 750px;
-	max-width: 100%;
 }
 
 .list-controls,
 .top-lists,
 .topic-list-bottom {
 	margin: 1em 0;
-	background: $main-background;
 	padding: 0.75em;
 }
 
-.period-chooser .top-date-string {
-	color: #909090;
-}
-
-.category-list tbody tr,
-.reply > .row {
-	border-top: 1px solid $border-color;
-}
-
-.topic-list thead,
-.category-list thead {
-	background: rgba(255, 255, 255, 0.9);
-}
-
 nav.post-controls .highlight-action,
-.topic-list .topic-list-item-separator td span {
+.topic-list .topic-list-item-separator td span,
+.period-chooser .top-date-string {
 	color: #d0d0d0;
 }
 
