--- a/common/common.scss
+++ b/common/common.scss
@@ -986,7 +986,8 @@ li#current-user a:not(.badge-notification) {
 
 nav.post-controls .highlight-action,
 .topic-list .topic-list-item-separator td span,
-.period-chooser .top-date-string {
+.period-chooser .top-date-string,
+.nav-stacked a {
 	color: #d0d0d0;
 }
 
