--- a/common/common.scss
+++ b/common/common.scss
@@ -1,13 +1,13 @@
 $trim-color: white;
-$main-color: #009688;
+$main-color: #8bc34a;
 $main-background: rgba(19, 20, 24, 0.9);
 $secondary-background: rgba(255, 255, 255, 0.1);
 $border-color: rgba(255, 255, 255, 0.1);
 $box-shadow-value: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
 	0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 $body-background-gradient-direction: bottom right;
-$body-background-gradient-color-first: darkred;
-$body-background-gradient-color-second: darkblue;
+$body-background-gradient-color-first: #9C27B0;
+$body-background-gradient-color-second: #673AB7;
 $body-background-pattern-opacity: 1;
 $body-background-gradient-opacity: 0.1;
 $body-admin-background-gradient-opacity: 0.2;
