--- a/common/common.scss
+++ b/common/common.scss
@@ -1,5 +1,5 @@
 $trim-color: white;
-$main-color: #8bc34a;
+$main-color: #607D8B;
 $main-background: rgba(19, 20, 24, 0.9);
 $secondary-background: rgba(255, 255, 255, 0.1);
 $border-color: rgba(255, 255, 255, 0.1);
